syntax = "proto3";

package microsoft.eshoponcontainers.integrationevents.ordering;

/* >>
import "google/api/annotations.proto";
<< */

option csharp_namespace="Microsoft.eShopOnContainers.Services.Kafka.Protobuf.IntegrationEvents.Ordering";

message OrderStockConfirmedProto {  
  int32 order_id = 1; 
}